# Demo_Sphinx

./: .gitignore
microstructure/: .pypirc  MANIFEST.in  README.md  automation_test.py  rve_visualization.py  setup.cfg
microstructure/docs/: GeoVal_objects.rst  ansys.rst  conf.py  document.txt  geoval.rst  index.rst  volume_fraction_mesh.rst  voxsm.rst  voxsm_mesh_generation.rst
microstructure/examples/: Output_note.txt  a.lua  examples_ansys.py  examples_geoval.py  examples_voxsm.py  phani_examples_geoval.py  phani_examples_voxsm.py  phani_examples_zta_generation.py
microstructure/examples_new/: 2_E_vs_Percentage.xlsx  E_vs_Percentage.xlsx  Ploynomial_fitting.py  Ploynomial_fitting2.py  Ploynomial_fitting3.py  a.lua  example_airfox.py  examples_ansys.py  examples_correlation_matrix.py  examples_correlation_matrix_2.py  examples_data_curvefitting.py  examples_geoval.py  examples_plotting_results.py  examples_voxsm.py  examples_voxsm2.py  examples_zta_ansys_sim.py  examples_zta_generation.py  examples_zta_meshing.py  phani_example2_airfox.py  phani_example3_airfox.py  prctice.py  results_elasticity2.txt
microstructure/old_examples/: a.lua  examples_ansys.py  examples_geoval.py  examples_voxsm.py  examples_zta_ansys_sim.py  examples_zta_generation.py  examples_zta_meshing.py  phani_examples_geoval.py  phani_examples_voxsm.py  phani_examples_zta_generation.py  phani_examples_zta_meshing.py  voxels.val
microstructure/test/: conftest.py  mock_mapdl.py  pytest.ini  pytest_main.py  test_ansys_run.py  test_ansys_sim.py  test_crystal.py  test_geoval.py  test_pipeline.py  (+1 more)
(+371 files in other folders)
