[metadata]
name = MPaut
version = 0.0.1
author = Simon Pirkelmann
author_email = simon.pirkelmann@isc.fraunhofer.de
description = Automated microstructure simulation toolchain
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.cc-asp.fraunhofer.de/pirkelma/mpaut
project_urls =
    Bug Tracker = https://gitlab.cc-asp.fraunhofer.de/pirkelma/mpaut/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Windows

[options]
package_dir =
    = src
packages = find:
; python 3.9 seems to have conflicting dependencies
python_requires = >=3.8, <3.9   
install_requires = 
    numpy
    pywinauto
    pywin32
    pyqtgraph
    pyopengl
    PyQt5==5.12
    ansys-mapdl-core
    sphinx
    sphinx_rtd_theme
    sphinxcontrib.apidoc
    sphinxcontrib.napoleon

[options.packages.find]
where = src
